GH-2032 - Document manual queries.

--- a/src/main/asciidoc/appendix/index.adoc
+++ b/src/main/asciidoc/appendix/index.adoc
@@ -8,6 +8,7 @@
 include::conversions.adoc[]
 include::neo4j-client.adoc[]
 include::query-creation.adoc[]
+include::custom-queries.adoc[]
 include::migrating.adoc[]
 include::build.adoc[]
 :leveloffset: -1
