--- a/src/main/asciidoc/faq/faq.adoc
+++ b/src/main/asciidoc/faq/faq.adoc
@@ -152,196 +152,7 @@ And here is the reactive version, omitting the setup for brevity:
 include::../../../../src/test/java/org/springframework/data/neo4j/documentation/spring_boot/ReactiveTemplateExampleTest.java[tags=faq.template-reactive]
 ----
 
-[[faq.parameters.custom-query]]
-== How do I specify parameters in custom queries?
-
-You do this exactly the same way as in a standard Cypher query issued in the Neo4j Browser or the Cypher-Shell, with the `$` syntax (from Neo4j 4.0 on upwards, the old `{foo}` syntax for Cypher parameters has been removed from the database);
-
-[source,java,indent=0]
-[[custom-queries-with-parameters]]
-.ARepository.java
-----
-include::../../../../src/test/java/org/springframework/data/neo4j/documentation/repositories/domain_events/ARepository.java[tags=standard-parameter]
-----
-<.> Here we are referring to the parameter by its name.
-You can also use `$0` etc. instead.
-
-NOTE: You need to compile your Java 8+ project with `-parameters` to make named parameters work without further annotations.
-The Spring Boot Maven and Gradle plugins do this automatically for you.
-If this is not feasible for any reason, you can either add
-`@Param`  and specify the name explicitly or use the parameters index.
-
-Mapped entities (everything with a `@Node`) passed as parameter to a function that is annotated with
-a custom query will be turned into a nested map.
-The following example represents the structure as Neo4j parameters.
-
-Given are a `Movie`, `Person` and `Actor` classes annotated as shown in <<movie-model, the movie model>>:
-
-[[movie-model]]
-[source,java]
-."Standard" movies model
-----
-@Node
-public final class Movie {
-
-    @Id
-    private final String title;
-
-    @Property("tagline")
-    private final String description;
-
-    @Relationship(value = "ACTED_IN", direction = Direction.INCOMING)
-    private final List<Actor> actors;
-
-    @Relationship(value = "DIRECTED", direction = Direction.INCOMING)
-    private final List<Person> directors;
-}
-
-@Node
-public final class Person {
-
-    @Id @GeneratedValue
-    private final Long id;
-
-    private final String name;
-
-    private Integer born;
-
-    @Relationship("REVIEWED")
-    private List<Movie> reviewed = new ArrayList<>();
-}
-
-@RelationshipProperties
-public final class Actor {
-
-    @TargetNode
-    private final Person person;
-
-    private final List<String> roles;
-}
-
-interface MovieRepository extends Neo4jRepository<Movie, String> {
-
-    @Query("MATCH (m:Movie {title: $movie.__id__})\n"
-           + "MATCH (m) <- [r:DIRECTED|REVIEWED|ACTED_IN] - (p:Person)\n"
-           + "return m, collect(r), collect(p)")
-    Movie findByMovie(@Param("movie") Movie movie);
-}
-----
-
-Passing an instance of `Movie` to the repository method above, will generate the following Neo4j map parameter:
-
-[source,json]
-----
-{
-  "movie": {
-    "__labels__": [
-      "Movie"
-    ],
-    "__id__": "The Da Vinci Code",
-    "__properties__": {
-      "ACTED_IN": [
-        {
-          "__properties__": {
-            "roles": [
-              "Sophie Neveu"
-            ]
-          },
-          "__target__": {
-            "__labels__": [
-              "Person"
-            ],
-            "__id__": 402,
-            "__properties__": {
-              "name": "Audrey Tautou",
-              "born": 1976
-            }
-          }
-        },
-        {
-          "__properties__": {
-            "roles": [
-              "Sir Leight Teabing"
-            ]
-          },
-          "__target__": {
-            "__labels__": [
-              "Person"
-            ],
-            "__id__": 401,
-            "__properties__": {
-              "name": "Ian McKellen",
-              "born": 1939
-            }
-          }
-        },
-        {
-          "__properties__": {
-            "roles": [
-              "Dr. Robert Langdon"
-            ]
-          },
-          "__target__": {
-            "__labels__": [
-              "Person"
-            ],
-            "__id__": 360,
-            "__properties__": {
-              "name": "Tom Hanks",
-              "born": 1956
-            }
-          }
-        },
-        {
-          "__properties__": {
-            "roles": [
-              "Silas"
-            ]
-          },
-          "__target__": {
-            "__labels__": [
-              "Person"
-            ],
-            "__id__": 403,
-            "__properties__": {
-              "name": "Paul Bettany",
-              "born": 1971
-            }
-          }
-        }
-      ],
-      "DIRECTED": [
-        {
-          "__labels__": [
-            "Person"
-          ],
-          "__id__": 404,
-          "__properties__": {
-            "name": "Ron Howard",
-            "born": 1954
-          }
-        }
-      ],
-      "tagline": "Break The Codes",
-      "released": 2006
-    }
-  }
-}
-----
-
-A node is represented by a map. The map will always contain `__id__`  which is the mapped id property.
-Under `__labels__` all labels, static and dynamic, will be available.
-All properties - and type of relationships - appear in those maps as they would appear in the graph when the entity would
-have been written by SDN.
-Values will have the correct Cypher type and won't need further conversion.
-
-All relationships are lists of maps. Dynamic relationships will be resolved accordingly.
-If an entity has a relationship with the same type to different types of others nodes, they will all appear in the same list.
-If you need such a mapping and also have the need to work with those custom parameters, you have to unroll it accordingly.
-One way to do this are correlated subqueries (Neo4j 4.1+ required).
-
-
-[[faq.custom-queries]]
+[[faq.custom-queries-with-page-and-slice]]
 == How do I use custom queries with repository methods returning `Page<T>` or `Slice<T>`?
 
 While you don't have to provide anything else apart a `Pageable` as a parameter on derived finder methods
@@ -389,74 +200,6 @@ public interface MyPersonRepository extends Neo4jRepository<Person, Long> {
 <.> This method returns a page. A page knows about the exact number of total pages.
     Therefore you must specify an additional count query.
     All other restrictions from the second method apply.
-
-[[faq.spel.custom-query]]
-== How do I use Spring Expression Language in custom queries?
-
-{spring-framework-ref}/core.html#expressions[Spring Expression Language (SpEL)] can be used in custom queries inside `:#{}`.
-This is the standard Spring Data way of defining a block of text inside a query that undergoes SpEL evaluation.
-
-The following example basically defines the same query as above, but uses a `WHERE` clause to avoid even more curly braces:
-
-[source,java,indent=0]
-[[custom-queries-with-spel]]
-.ARepository.java
-----
-include::../../../../src/test/java/org/springframework/data/neo4j/documentation/repositories/domain_events/ARepository.java[tags=spel]
-----
-
-The SpEL blocked starts with `:#{` and than refers to the given `String` parameters by name (`#pt1`).
-Don't confuse this with the above Cypher syntax!
-The SpEL expression concatenates both parameters into one single value that is eventually passed on to the <<neo4j-client>>.
-The SpEL block ends with `}`.
-
-SpEL also solves two additional problems. We provide two extensions that allow to pass in a `Sort` object into custom queries.
-Remember <<custom-queries-with-page-and-slice-examples>> from <<faq.custom-queries,custom queries>>?
-With the `orderBy` extension you can pass in a `Pageable` with a dynamic sort to a custom query:
-
-[[custom-queries-with-spel-extensions]]
-[source,java]
-.orderBy-Extension
-----
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
-import org.springframework.data.neo4j.repository.Neo4jRepository;
-import org.springframework.data.neo4j.repository.query.Query;
-
-public interface MyPersonRepository extends Neo4jRepository<Person, Long> {
-
-    @Query(""
-        + "MATCH (n:Person) WHERE n.name = $name RETURN n "
-        + ":#{orderBy(#pageable)} SKIP $skip LIMIT $limit" // <.>
-    )
-    Slice<Person> findSliceByName(String name, Pageable pageable);
-
-    @Query(""
-        + "MATCH (n:Person) WHERE n.name = $name RETURN n :#{orderBy(#sort)}" // <.>
-    )
-    List<Person> findAllByName(String name, Sort sort);
-}
-----
-<.> A `Pageable` has always the name `pageable` inside the SpEL context.
-<.> A `Sort` has always the name `sort` inside the SpEL context.
-
-The `literal` extension can be used to make things like labels or relationship-types "dynamic" in custom queries.
-Neither labels nor relationship types can be parameterized in Cypher, so they must be given literal.
-
-[source,java]
-.literal-Extension
-----
-interface BaseClassRepository extends Neo4jRepository<BaseClass, Long> {
-
-    @Query("MATCH (n:`:#{literal(#label)}`) RETURN n") // <.>
-    List<Inheritance.BaseClass> findByLabel(String label);
-}
-----
-<.> The `literal` extension will be replaced with the literal value of the evaluate parameter.
-    Here it has been used to match dynamically on a Label.
-    If you pass in `SomeLabel` as a parameter to the method, `MATCH (n:``SomeLabel``) RETURN n`
-    will be generated. Ticks have been added to correctly escape values. SDN won't do this
-    for you as this is probably not what you want in all cases.
 
 [[faq.entities.auditing]]
 == How do I audit entities?
