GH-2118 - Don't overwrite unknown properties of known nodes and relationships.
This commit fixes the behaviour of overwrwiting unknown properties of
nodes and relationships: Instead of using the SET operation we must use
MUTATE, effectivly creating a `n += properties` instead of `n =
properties` assignment.

Furthermore, it requires a change by users: We offered the possibility
to use `@RelationshipProperties` without the need for a field storing
the internal id. The id however _is_ needed to check whether a
relationship already exist or not. While this is irrelevant for
relationships without properties, it is very much relevant for the ones
having properties.

We log a warning now about the fact. That will be a hard requirement for
6.1.

To make this work, the verification of the presence of an id property
needed to be reworked. It id property is now stored in a thread safe
lazy as well and assigned during the creation of a persistent entity.

Some minor improvements have been added as well:
* We don't pass the literal value for the target id when saving new
  relationships
* We avoid some parameters in the Cypher generator
* We optimized a condition in the converter so that it leaves evaluating
  retrieved values early

This closes #2118 and requires Cypher-DSL 2020.1.6.

--- a/src/main/asciidoc/faq/faq.adoc
+++ b/src/main/asciidoc/faq/faq.adoc
@@ -288,6 +288,9 @@ public final class Person {
 @RelationshipProperties
 public final class Actor {
 
+	@Id @GeneratedValue
+	private final Long id;
+
 	@TargetNode
 	private final Person person;
 
