GH-2135 - Add documentation for custom Graph repository fragments.
This closes #2135.

--- a/src/main/asciidoc/appendix/custom-queries.adoc
+++ b/src/main/asciidoc/appendix/custom-queries.adoc
@@ -6,6 +6,9 @@ Those come in handy if you cannot express the finder logic via derived query fun
 
 Because Spring Data Neo4j works heavily record-oriented under the hood, it is important to keep this in mind and not build up a result set with multiple records for the same "root node".
 
+TIP: Please have a look in the FAQ as well to learn about alternative forms of using custom queries from repositories, especially
+how to use custom queries with custom mappings: <<faq.custom-queries-and-custom-mappings>>.
+
 [[custom-queries.for-relationships]]
 == Queries with relationships
 
@@ -49,7 +52,8 @@ With this result as a single record it is possible for Spring Data Neo4j to add 
 [[custom-queries.parameters]]
 == Parameters in custom queries
 
-You do this exactly the same way as in a standard Cypher query issued in the Neo4j Browser or the Cypher-Shell, with the `$` syntax (from Neo4j 4.0 on upwards, the old `{foo}` syntax for Cypher parameters has been removed from the database);
+You do this exactly the same way as in a standard Cypher query issued in the Neo4j Browser or the Cypher-Shell,
+with the `$` syntax (from Neo4j 4.0 on upwards, the old `{foo}` syntax for Cypher parameters has been removed from the database).
 
 [source,java,indent=0]
 .ARepository.java
@@ -245,7 +249,7 @@ This is the standard Spring Data way of defining a block of text inside a query 
 The following example basically defines the same query as above, but uses a `WHERE` clause to avoid even more curly braces:
 
 [source,java,indent=0]
-[[custom-queries-with-spel]]
+[[custom-queries-with-spel-parameter-example]]
 .ARepository.java
 ----
 include::../../../../src/test/java/org/springframework/data/neo4j/documentation/repositories/domain_events/ARepository.java[tags=spel]
